Prohibit repeating dailies with a data reset period of thirty-two days after total game completion, bugfix winning on the last guess, reduce local storage usage for runtime-generated global variables, general refactoring for conciseness and readability, clear local storage on erroneous load, add button for copying to-date weekly stats to clipboard, reset game automatically at midnight, save guesses for incomplete games, countdown to next incompleted daily rather than the next day, attempt to fix mobile stats button text appearance, and other assorted changes and fixes

--- a/style.css
+++ b/style.css
@@ -9,4 +9,5 @@ canvas {
 }
 button {
   border-color: #000;
+  text-align: center;
 }
